First entity commit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,9 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/WECON
-    username: postgres
-    password: 228Nikita1337_
+    username: root
+    password: root
+
   jpa:
     generate-ddl: true
     show-sql: true
