--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/WECON
-    username: root
-    password: root
+    url: jdbc:postgresql://localhost:5432/WeConDB
+    username: postgres
+    password: 123456
 
   jpa:
     generate-ddl: true
